  * This condition affected HFS+ setups and was implemented to help such users out
  * Now, the setting will simply not be saved in such instances
  * A debug log item will inform users that the setting was not saved
- Improves OpenProtocol and HandleProtocol Mapping
  * Fixes potential race condition in mapping structure
  * Discards superflous variables
- Renames "trim_force" Config Option Back to "force_trim"
  * This more accurately reflects the action taken
- Fixes Several Memory Management Issues
  * These had largely been introduced after the v0.12.0.AN Release
  * One outcome had been a failure to run on units some units (mainly laptops)
- Adds 'EnforceAPFS' Feature
  * Allows booting Mac OS Big Sur when SIP is disabled.
  * Allows booting FileVault encrypted volumes directly.
- Attempts to Avoid Hardware NVRAM Writes of Unchanged Variables
  * Now compares new variables with existing NVRAM variables and does not write if already present.
- Adds the 'IgnorePreviousBoot' Feature
  * Provides option not to always save the name of the previously booted loader
- Limits 'AllowDuplicates' feature to ESPs
  * This feature now only applies to ESPs.



0.13.0 (15 FEB 2021): UPSTREAM RELEASE
--------------------------------------
- Fixed compile problem with GCC version 10.
- Fixed compile problems with GCC 9 and the Btrfs and HFS+ drivers under EDK2.
- Replaced use of "which" with "command -v" in shell scripts.
- Fixed detection of UUID on ext2/3/4 filesystems; old code incorrectly
  marked filesystems with different UUIDs but the same label as duplicates.
- Fixed bug that caused mouse pointer to disappear on 64-bit systems when
  it was moved, when mouse pointer support was active.
- Fixed memory management bug that could cause rEFInd to hang in some situations.
- Fixed bug that could cause EFI 1.x (UGA graphics) systems to hang if
  the refind.conf "resolution" line specified only one parameter. (This