@@ -137,7 +137,7 @@ REFIT_CONFIG GlobalConfig = {
     /* SuppressVerboseAPFS = */ FALSE,
     /* EnforceAPFS = */ FALSE,
     /* ProtectMacNVRAM = */ FALSE,
-    /* AllowDuplicates = */ FALSE,
+    /* ScanOtherESP = */ FALSE,
     /* ShutdownAfterTimeout = */ FALSE,
     /* Install = */ FALSE,
     /* WriteSystemdVars = */ FALSE,
