@@ -25,8 +25,6 @@
 - Improves OpenProtocol and HandleProtocol Mapping
   * Fixes potential race condition in mapping structure
   * Discards superflous variables
-- Renames "trim_force" Config Option Back to "force_trim"
-  * This more accurately reflects the action taken
 - Fixes Several Memory Management Issues
   * These had largely been introduced after the v0.12.0.AN Release
   * One outcome had been a failure to run on units some units (mainly laptops)
@@ -39,6 +37,11 @@
   * Provides option not to always save the name of the previously booted loader
 - Limits 'AllowDuplicates' feature to ESPs
   * This feature now only applies to ESPs.
+- Changes 'allow_duplicates' Config Option to 'scan_other_esp'
+  * Reflects change of scope
+- Changes 'trim_force' Config Option Back to 'force_trim'
+  * This more accurately reflects the action taken
+
 
 
 
